@@ -13,6 +13,7 @@
 	- Added notes field to the user VN list
 	- Added vnlists.status filter to /u+/list
 	- Pass VN tag filters by ID rather than name
+	- Don't send 'tagspoil' filter when 'tag_inc' isn't active
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
